--- a/index.html
+++ b/index.html
@@ -29,14 +29,14 @@
                     <div class="year">
                         <p class="p1"><b>(   ၂၀၂၂  -  ၂၀၂၃   )    ပညာသင်နှစ်</b></p>
                         </div>
-                  <p> <b>အမည် :</b> မမိုးဝတီအောင်အောင်</p>
-<p> <b>ခုံအမှတ် :</b> III IR -2</p>
-<p> <b>တက္ကသိုလ်မှတ်ပုံတင်အမှတ် :</b> NSA-00031</p>
-<p> <b>အဘအမည် :</b> ဦးအောင်အောင်</p>
-<p> <b>မွေးသက္ကရာဇ် :</b> ၀၉၉၇၀၄၂၀၁၇၇</p>
-<p> <b>နိုင်ငံသားစိစစ်ရေးအမှတ် :</b> ၀၇-၀၃-၀၂</p>
-<p> <b>နေရပ်လိပ်စာ :</b> ၁၄/ဓနဖ(နိုင်)၂၁၁၇၂၂</p>
-<p> <b>ဖုန်းနံပါတ် :</b> (၅၄၇၇)၊ မန္တလေးလမ်း၊ ၊ဥတ္တရသီရိ၊နေပြည်တော်</p>
+                  <p> <b>အမည် :</b> မောင်သူရိန်စိုး</p>
+<p> <b>ခုံအမှတ် :</b> III IR -1</p>
+<p> <b>တက္ကသိုလ်မှတ်ပုံတင်အမှတ် :</b> NSA-00030</p>
+<p> <b>အဘအမည် :</b> ဦးမြင့်ဌေး</p>
+<p> <b>မွေးသက္ကရာဇ် :</b> ၀၉၄၅၈၀၆၄၆၆၁</p>
+<p> <b>နိုင်ငံသားစိစစ်ရေးအမှတ် :</b> ၀၉-၀၃-၂၀၀၂</p>
+<p> <b>နေရပ်လိပ်စာ :</b> ၉/ဇယသ(နိုင်)၀၀၆၂၆၅</p>
+<p> <b>ဖုန်းနံပါတ် :</b> တိုက်(၁၃)အခန်း(ဇ)စံပယ်(၃)၊ဇေယျာသီရိ၊နေပြည်တော်</p>
 
 
                <div class="endstickfoot">
