--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
              <!-- This is for id photo -->
 
-                <img src="ir1.jpg" alt="">
+                <img src="phil3.jpg" alt="">
             </div>
             <div class="logonsa">
 
@@ -29,14 +29,14 @@
                     <div class="year">
                         <p class="p1"><b>(   ၂၀၂၂  -  ၂၀၂၃   )    ပညာသင်နှစ်</b></p>
                         </div>
-                  <p> <b>အမည် :</b> မောင်သူရိန်စိုး</p>
-<p> <b>ခုံအမှတ် :</b> III IR -1</p>
-<p> <b>တက္ကသိုလ်မှတ်ပုံတင်အမှတ် :</b> NSA-00030</p>
-<p> <b>အဘအမည် :</b> ဦးမြင့်ဌေး</p>
-<p> <b>မွေးသက္ကရာဇ် :</b> ၀၉၄၅၈၀၆၄၆၆၁</p>
-<p> <b>နိုင်ငံသားစိစစ်ရေးအမှတ် :</b> ၀၉-၀၃-၂၀၀၂</p>
-<p> <b>နေရပ်လိပ်စာ :</b> ၉/ဇယသ(နိုင်)၀၀၆၂၆၅</p>
-<p> <b>ဖုန်းနံပါတ် :</b> တိုက်(၁၃)အခန်း(ဇ)စံပယ်(၃)၊ဇေယျာသီရိ၊နေပြည်တော်</p>
+                  <p> <b>အမည် :</b> မောင်စိုင်းထက်</p>
+<p> <b>ခုံအမှတ် :</b> III Phil-3</p>
+<p> <b>တက္ကသိုလ်မှတ်ပုံတင်အမှတ် :</b> NSA-00029</p>
+<p> <b>အဘအမည် :</b> ဦးလှမြင့်</p>
+<p> <b>မွေးသက္ကရာဇ် :</b> ၁၅-၇-၁၉၉၇</p>
+<p> <b>နိုင်ငံသားစိစစ်ရေးအမှတ် :</b> ၉/ပမန(နိုင်)၂၅၂၇၉၆</p>
+<p> <b>နေရပ်လိပ်စာ :</b> အမှတ်(၆၀၀၄)ရွှေတဆုပ်လမ်းသွယ်၊အင်းဝလမ်း၊တပင်ရွှေထီးရပ်ကွက်၊ပုဗ္ဗသီရိ၊နေပြည်တော်</p>
+<p> <b>ဖုန်းနံပါတ် :</b> ၀၉၂၆၂၀၈၁၅၁၈</p>
 
 
                <div class="endstickfoot">
